added comments + more info + QOL tweaks

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,10 +1,16 @@
+<!-- About page -->
 <%- include('../partials/header') %>
 
 <h1 class="mb-3">About Me</h1>
-<p>I'm Roshaan Ghumman. BLABLABLABLA ADD MORE STUFF</p>
+<p>I'm Roshaan Ghumman. I enjoy learning new things and building random projects for fun.
+	I like figuring out how websites work, trying out new tech, and improving a little every day.
+	I’m still learning, but I enjoy the process and I’m always down to try something new.</p>
+
+<!-- quick bullet lists for skills/interests -->
+
 <ul>
-  <li><strong>Skills:</strong> JavaScript, ETC ETC ETC </li>
-  <li><strong>Interests:</strong> Valorant, ETC ETC ETC </li>
+  <li><strong>Interests:</strong> Gaming & tech, Web development & creating small projects </li>
+  <li><strong>Skills:</strong> JavaScript (Node.js, Express, EJS), HTML & CSS, Git & GitHub </li>
 </ul>
 
 <%- include('../partials/footer') %>
