added project link

--- a/views/pages/projects.ejs
+++ b/views/pages/projects.ejs
@@ -22,7 +22,7 @@
       <div class="card-body">
         <h5 class="card-title">OOP Final Project</h5>
         <p class="card-text">Final Object-Oriented Programming project made using Java. Shows understanding of classes, objects, inheritance, and basic OOP concepts.</p>
-        <a class="btn btn-primary btn-sm" href="#" target="_blank">View Project</a>
+        <a class="btn btn-primary btn-sm" href="https://github.com/rozanxc/OOP-Final-Project" target="_blank">View Project</a>
       </div>
     </div>
   </div>
